chore: consolidate release branches without bid solution assets